@@ -145,6 +145,11 @@ void WebSettingsImpl::setDeveloperExtrasEnabled(bool enabled)
     m_settings->setDeveloperExtrasEnabled(enabled);
 }
 
+void WebSettingsImpl::setNeedsSiteSpecificQuirks(bool enabled)
+{
+    m_settings->setNeedsSiteSpecificQuirks(enabled);
+}
+
 void WebSettingsImpl::setShrinksStandaloneImagesToFit(bool shrinkImages)
 {
     m_settings->setShrinksStandaloneImagesToFit(shrinkImages);
